Fix the issue with de width on mobile

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ html {
 body {
     display: grid;
     justify-items: center;
+    /* align-items: center; */
 }
 
 /* HEADER */
@@ -122,7 +123,7 @@ footer {
 
 /* Responsive - Desktop */
 
-@media  screen and (min-width: 1200px) {
+@media  screen and (min-width: 1100px) {
 
     /* Navigation bar */
 
